--- a/theme/i18n/ja.yaml
+++ b/theme/i18n/ja.yaml
@@ -33,7 +33,7 @@
   translation: "コピーされました!"
 
 - id: default_font_license
-  translation: "このサイトは、ウェブフォントとして[Maru Buri](https://hangeul.naver.com/)・[Pretendard](https://github.com/orioncactus/pretendard)・[D2Coding](https://github.com/naver/d2codingfont)を使用しています。"
+  translation: "このサイトは、ウェブフォントとして[Yoon® Daehan](https://font.co.kr/collection/sub?family_idx=10587)・[Pretendard](https://github.com/orioncactus/pretendard)・[D2Coding](https://github.com/naver/d2codingfont)を使用しています。"
 
 - id: list_title_posts
   translation: "記事一覧"
