--- a/theme/i18n/en.yaml
+++ b/theme/i18n/en.yaml
@@ -35,6 +35,9 @@
 - id: default_font_license
   translation: "This site uses [Yoon® Daehan](https://font.co.kr/collection/sub?family_idx=10587), [Pretendard](https://github.com/orioncactus/pretendard), [D2Coding](https://github.com/naver/d2codingfont) as web fonts."
 
+- id: google_analytics_notice
+  translation: "This site uses Google Analytics to collect anonymous traffic data."
+
 - id: list_title_posts
   translation: "Posts"
 
