Default translatable title and placeholder text for search page

--- a/theme/i18n/en.yaml
+++ b/theme/i18n/en.yaml
@@ -23,6 +23,12 @@
 - id: home
   translation: "Home"
 
+- id: search
+  translation: "Search"
+
+- id: search_placeholder
+  translation: "Type to search..."
+
 - id: edit_post
   translation: "Edit"
 
